<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal">

        <mvp.com.neteaseapp.customview.ColorTextView
            android:id="@+id/news_color_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="1dp"
            app:text="@string/news" />

        <mvp.com.neteaseapp.customview.ColorTextView
            android:id="@+id/video_color_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="1dp"
            app:text="@string/video" />

        <mvp.com.neteaseapp.customview.ColorTextView
            android:id="@+id/image_color_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="1dp"
            app:text="@string/image" />

        <mvp.com.neteaseapp.customview.ColorTextView
            android:id="@+id/attention_color_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="1dp"
            app:text="@string/attention" />
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/content_viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
</merge>