<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/house"
        android:gravity="center"
        android:text="@string/house"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/name_edit"
        android:layout_width="@dimen/login_edit_width"
        android:layout_height="@dimen/login_edit_height"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/edit_rectangle"
        android:hint="@string/name"
        android:paddingStart="4dp"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/pwd_edit"
        android:layout_width="@dimen/login_edit_width"
        android:layout_height="@dimen/login_edit_height"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@drawable/edit_rectangle"
        android:hint="@string/password"
        android:paddingStart="4dp"
        android:textSize="12sp" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="@dimen/login_edit_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/login_btn_rectangle"
        android:text="@string/login" />

    <LinearLayout
        android:layout_width="@dimen/login_edit_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/forget_pwd_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/forget_pwd" />

        <TextView
            android:id="@+id/register_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/register" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/third_login" />

    <LinearLayout
        android:layout_width="@dimen/login_edit_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <ImageView
            android:id="@+id/weixin_img"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/weixin" />

        <ImageView
            android:id="@+id/qq_img"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/qq" />

        <ImageView
            android:id="@+id/sina_img"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/sina" />
    </LinearLayout>

</LinearLayout>